# proglangs

./: .gitignore  pyproject.toml
proglangs/: db.sqlite3  manage.py
proglangs/pl/: models.py  urls.py  views.py
proglangs/pl/migrations/: 0001_initial.py
proglangs/proglangs/: asgi.py  settings.py  urls.py  wsgi.py
