[tool.poetry]
name = "proglangs"
version = "0.1.0"
description = "Pet Project ProgLangs"
authors = ["Andrey <reygofor@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.1.7"


[tool.poetry.group.dev.dependencies]
python-dotenv = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
